# TagLauncher

./: .gitignore  LICENSE  PROJECT_MANUAL.md  README.md  TUTORIAL.md  build.bat  dev.bat  generate-icon.mjs  index.html  package-lock.json  package.json  todo.txt  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: cabinet_commands.rs  item_commands.rs  launch_commands.rs  mod.rs  mod_commands.rs  search_commands.rs  settings_commands.rs  synonym_commands.rs  tag_commands.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: mod.rs  v001_baseline.rs  v002_item_tag_position.rs  v003_performance_indexes.rs
src-tauri/src/extensions/: mod.rs  mod_loader.rs  mod_registry.rs  theme_loader.rs
src-tauri/src/models/: cabinet.rs  errors.rs  item.rs  mod.rs  settings.rs  tag.rs
src-tauri/src/services/: cabinet_service.rs  icon_service.rs  item_service.rs  launch_service.rs  mod.rs  path_service.rs  search_service.rs  settings_service.rs  synonym_service.rs  tag_service.rs
src/components/: ContextMenu.tsx  DraggableTagList.tsx  FavoriteStar.tsx  FloatingPanels.tsx  ItemCard.tsx  ItemDragHandle.tsx  ItemGrid.tsx  ItemListView.tsx  ItemRow.tsx  ItemTagsEditor.tsx  ItemVisualIcon.tsx  MigrationDialog.tsx  ModManagerPanel.tsx  SearchBar.tsx  SelectionCanvas.tsx  SettingsPanel.tsx  Sidebar.tsx  TagEditor.tsx  TagFilterBar.tsx  ThemeProvider.tsx  (+2 more)
(+34 files in other folders)
